--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,4 +4,4 @@ build_script:
 - ps: .appveyor\build.ps1
 
 artifacts:
-- path: windows\Installer\bin\en-us*
+- path: windows\Installer\bin\en-us\*.msi
